# finance_ai

./: Dockerfile_gcp  Dockerfile_local  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  start.sh
app/: app.py  backend.py  server.py
data/: capitalone_transaction_2023.csv
test/: test.ipynb  test.py
