[tool.poetry]
name = "finance_ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["all"], version = "^0.1.1"}
pydantic = "<2"
langchain-voyageai = "^0.1.0"
qdrant-client = "^1.9.1"
langchain-groq = "^0.1.3"
langchain-cohere = "^0.1.4"
langgraph = "^0.0.47"
python-decouple = "^3.8"
streamlit = "^1.34.0"
langchain = "^0.1.17"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
